--- a/doc/sty/tex2rtf.ini
+++ b/doc/sty/tex2rtf.ini
@@ -12,3 +12,6 @@ htmlBrowseButtons = bitmap
 \samepage [1] {#1}
 \space [0] {}
 ; Some stuff
+\protect [1] {#1}
+\astroncite [1] {#1}
+\newblock [1] {#1}
